@@ -38,7 +38,7 @@ require_once('includes/application_top.php');
 <html <?php echo HTML_PARAMS; ?>>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=<?php echo CHARSET; ?>">
-    <title><?php zm_l10n("ZenMagick Plugin Page :: %s", $page->getTitle()) ?></title>
+    <title><?php zm_l10n("ZenMagick Plugin Page :: %s", (null != $page ? $page->getTitle() : '')) ?></title>
     <link rel="stylesheet" type="text/css" href="includes/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="includes/zenmagick.css">
     <link rel="stylesheet" type="text/css" href="includes/cssjsmenuhover.css" media="all" id="hoverJS">
